@@ -6,10 +6,15 @@ import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import team03.mopl.common.exception.dm.DmRoomNotFoundException;
+import team03.mopl.common.exception.user.UserNotFoundException;
 import team03.mopl.domain.dm.dto.DmRoomDto;
 import team03.mopl.domain.dm.entity.Dm;
 import team03.mopl.domain.dm.entity.DmRoom;
 import team03.mopl.domain.dm.repository.DmRoomRepository;
+import team03.mopl.domain.notification.entity.NotificationType;
+import team03.mopl.domain.notification.service.NotificationService;
+import team03.mopl.domain.user.UserRepository;
 
 @Service
 @RequiredArgsConstructor
@@ -17,12 +22,21 @@ import team03.mopl.domain.dm.repository.DmRoomRepository;
 public class DmRoomServiceImpl implements DmRoomService {
   private final DmRoomRepository dmRoomRepository;
   private final DmService dmService;
+  private final UserRepository userRepository;
+  private final NotificationService notificationService;
 
   @Override
   @Transactional
   public DmRoomDto createRoom(UUID senderId, UUID receiverId) {
     //추후 유저 검증 필요
-    return DmRoomDto.from(dmRoomRepository.save(new DmRoom(senderId, receiverId)));
+    userRepository.findById(senderId).orElseThrow(UserNotFoundException::new);
+    userRepository.findById(receiverId).orElseThrow(UserNotFoundException::new);
+    DmRoomDto roomDto = DmRoomDto.from(dmRoomRepository.save(new DmRoom(senderId, receiverId)));
+
+    // 알림 전송 추가
+    notificationService.sendNotification(receiverId, NotificationType.NEW_DM_ROOM, "새로운 DM 방이 생성되었습니다.");
+
+    return roomDto;
   }
 
   @Override
@@ -39,17 +53,31 @@ public class DmRoomServiceImpl implements DmRoomService {
   // 유저의 모든 채팅방
   @Override
   public List<DmRoomDto> getAllRoomsForUser(UUID userId) {
-    return dmRoomRepository.findBySenderIdOrReceiverId(userId, userId).stream().map(DmRoomDto::from).collect(Collectors.toList());
+    //내가 sender 이거나 receiver 이거나
+    return dmRoomRepository.findBySenderIdOrReceiverId(userId, userId).stream()
+        .map(d -> DmRoomDto.from(d.getMessages().get(d.getMessages().size() - 1).getContent(), getUnreadCount(d.getId(), userId), d)).toList();
+
+    //return dmRoomRepository.findBySenderIdOrReceiverId(userId, userId).stream().map(DmRoomDto::from).collect(Collectors.toList());
   }
+
+  public int getUnreadCount(UUID roomId, UUID userId) {
+    DmRoom dmRoom = dmRoomRepository.findById(roomId)
+        .orElseThrow(DmRoomNotFoundException::new);
+    return (int) dmRoom.getMessages()
+        .stream()
+        .filter(dm -> !dm.getReadUserIds().contains(userId))
+        .count();
+  }
+
   @Override
   public void deleteRoom(UUID userId, UUID roomId) { //파라미터 변경! ( 삭제하고자 하는 룸의 유저가 삭제가능 )
     // 둘 다 나가기 전까지는 채팅이 살아있어야 함
-    DmRoom dmRoom = dmRoomRepository.findById(roomId).orElseThrow(() -> new IllegalArgumentException("Room not found"));
-    if( dmRoom.getReceiverId().equals(userId) || dmRoom.getSenderId().equals(userId)) {
+    DmRoom dmRoom = dmRoomRepository.findById(roomId).orElseThrow(DmRoomNotFoundException::new);
+    if (dmRoom.getReceiverId().equals(userId) || dmRoom.getSenderId().equals(userId)) {
       //둘 중 하나의 유저가 나가고 싶어함
-      if (dmRoom.getSenderId().equals(userId)){
+      if (dmRoom.getSenderId().equals(userId)) {
         dmRoom.setSenderId(null);
-      }else {
+      } else {
         dmRoom.setReceiverId(null);
       }
       //아무도 없는지 확인
